[package]
name = "slots_from_hell"
version = "0.1.1"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
  "2d", "ui", "default_font", "bevy_winit", "bevy_core_pipeline", "multi_threaded", "jpeg"
  ] }
chacha20 = "0.10.0"
rand = "0.10.1"

[profile.dev]
debug = 0
strip = "symbols"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
